# picosdk-helloworld

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  arm-none-eabi-gcc.cmake  build.sh  docker-entrypoint.sh  pico_sdk_import.cmake
include/: hello_world.h
src/: main.c
